chore: seal current work
Signed-off-by: Sam Gammon <sam@elide.ventures>